increase gap and add fix alignment

--- a/wp-content/themes/engage-2-x/assets/scss/layout/_grid.scss
+++ b/wp-content/themes/engage-2-x/assets/scss/layout/_grid.scss
@@ -52,6 +52,13 @@
 			grid-column-gap: 30px;
 		}
 	}
+	.grid--gap-40 {
+		grid-column-gap: 0px;
+		grid-row-gap: 40px;
+		@include media($phablet) {
+			grid-column-gap: 40px;
+		}
+	}
 }
 @supports not (display: grid) {
 	.grid--gap-30 {
